bin.old/iptables.save
# Generated by xtables-save v1.8.2 on Tue Dec  7 19:10:16 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:PORTSCAN - [0:0]
:SYNFLOOD - [0:0]
:REJECTED - [0:0]




-A REJECTED -p tcp -j REJECT --reject-with tcp-reset


-A SYNFLOOD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 40/sec -j RETURN
-A SYNFLOOD -p tcp -j REJECTED
-A INPUT -p tcp -m state --state NEW -j SYNFLOOD


-A INPUT -i lo -p tcp -m tcp --dport 8118 -j ACCEPT
-A INPUT -i lo -p udp -m udp --dport 8118 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 9050 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 9051 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 9150 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 9151 -j ACCEPT
-A INPUT -i lo -p udp -m udp --dport 9053 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 9053 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i lo -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.42.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 192.168.42.0/24 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 192.168.42.0/24 -p tcp -m tcp --dport 8118 -j ACCEPT
-A INPUT -s 192.168.42.0/24 -p udp -m udp --dport 8118 -j ACCEPT
-A INPUT -s 192.168.42.0/24 -p udp -m udp --dport 9053 -j ACCEPT
-A INPUT -s 192.168.42.0/24 -p tcp -m tcp --dport 9050 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p tcp -j PORTSCAN
-A INPUT -f -j DROP
-A INPUT -p tcp -m state --state NEW -j SYNFLOOD
-A INPUT -j DROP
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 5353 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 5353 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 67 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 67 -j ACCEPT
#-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6667 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6979 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6999 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8118 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9001 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9050 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 9053 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9150 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 9150 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9151 -j ACCEPT
-A OUTPUT -j DROP
-A PORTSCAN -p tcp -m tcp --tcp-flags FIN,ACK FIN -j DROP
-A PORTSCAN -p tcp -m tcp --tcp-flags PSH,ACK PSH -j DROP
-A PORTSCAN -p tcp -m tcp --tcp-flags ACK,URG URG -j DROP
-A PORTSCAN -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A PORTSCAN -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A PORTSCAN -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j DROP
-A PORTSCAN -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A PORTSCAN -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A PORTSCAN -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A PORTSCAN -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,PSH,URG -j DROP
-A PORTSCAN -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
COMMIT
# Completed on Tue Dec  7 19:10:16 2021
# Generated by xtables-save v1.8.2 on Tue Dec  7 19:10:16 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Dec  7 19:10:16 2021
